# repomon

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  STATUS.md  install.ps1  install.sh
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  desktop-preview.yml  desktop-release.yml  release.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/e2e/: README.md  host-smoke.sh  isolated.sh  run.ts
apps/desktop/scripts/: build-tauri.ts  prepare-sidecar.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css  theme.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.preview.conf.json  tauri.preview.win.conf.json  tauri.release.conf.json  tauri.release.win.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: connection.rs  ipc.rs  lib.rs  main.rs  state.rs  terminal.rs
apps/desktop/src/bindings/: AccountUsage.ts  AgentChoice.ts  AgentSession.ts  AgentStatus.ts  BrowseEntry.ts  BrowseResult.ts  Commit.ts  Correlation.ts  CreateLaneParams.ts  DialogOption.ts  DirtyState.ts  EnabledSource.ts  ExtSnapshot.ts  FanoutSummary.ts  GateVerdict.ts  Lane.ts  LaneMeta.ts  MarketplaceInfo.ts  PendingDialog.ts  PluginInfo.ts  PluginProvides.ts  RemoteDevice.ts  Repo.ts  SessionKind.ts  SkillInfo.ts  SkillSource.ts  SkippedLane.ts  SyncReport.ts  TimeRange.ts  TimelineData.ts  TimelineRow.ts  TranscriptItem.ts  UsageReport.ts  UsageWindow.ts  WorkSession.ts  Worktree.ts  WorktreeState.ts  index.ts
apps/desktop/src/components/: ActionModals.tsx  AgentHistory.test.tsx  AgentHistory.tsx  ConfirmDialog.tsx  ControlCenter.test.ts  ControlCenter.tsx  ExtensionDrawer.tsx  ExtensionsView.tsx  FleetSidebar.tsx  Modal.test.tsx  Modal.tsx  NewLaneModal.tsx  RenameModal.tsx  RepoExtMenu.tsx  RepomindPanel.tsx  SettingsModal.tsx  SkillEditorModal.tsx  SpawnModal.tsx  TerminalPane.tsx  TerminalWorkspace.tsx  UpdateBanner.tsx  terminalTargets.test.ts  terminalTargets.ts
apps/desktop/src/ipc/: connection.test.ts  connection.ts  dialog.ts  rpc.test.ts  rpc.ts  term.test.ts  term.ts  updater.ts
apps/desktop/src/stores/: actions.ts  extensions.test.ts  extensions.ts  fleet.test.ts  fleet.ts  notifications.test.ts  notifications.ts
crates/repomon-core/: Cargo.toml
crates/repomon-core/migrations/: 0001_init.sql  0002_agent_kind.sql  0003_devices.sql  0004_session_labels.sql  0005_lanes_autoincrement.sql  0006_remote_devices.sql  0007_orchestration_log.sql  0008_playbooks.sql  0009_schedules.sql  0010_approvals.sql
crates/repomon-core/src/: analytics.rs  client.rs  clipboard.rs  config.rs  error.rs  exec.rs  indexer.rs  input.rs  lane.rs  launch.rs  lib.rs  model.rs  notes.rs  notify.rs  process.rs  protocol.rs  registry.rs  schedule.rs  service.rs  session.rs  traits.rs  transport.rs  watch.rs
crates/repomon-core/src/agent/: approval.rs  attention.rs  backend.rs  claude.rs  gate.rs  limit.rs  mod.rs  prompt.rs  text.rs  tmux.rs  usage.rs  windows.rs
crates/repomon-core/src/agent/fixtures/: codex_status_v0.ansi  trust_prompt.txt  usage_v2.ansi
crates/repomon-core/src/git/: diff.rs  mod.rs  reader.rs  worktree.rs
crates/repomon-core/src/store/: mod.rs
crates/repomon-core/tests/: client_reconnect.rs
crates/repomon-daemon/: Cargo.toml
crates/repomon-daemon/src/: auto_continue.rs  bytes_stream.rs  conn.rs  ext.rs  lib.rs  main.rs  notify_watch.rs  pubsub.rs  push.rs  reap.rs  remote.rs  rpc.rs  socket.rs  standing.rs  usage_watch.rs
crates/repomon-daemon/tests/: integration.rs  mcp_stdio.rs  orchestrator.rs  orchestrator_codex.rs  orchestrator_concurrent.rs  plugin_missing_cli.rs  remote.rs  standing.rs  windows_backend.rs
crates/repomon-host/: Cargo.toml  PROTOCOL.md
crates/repomon-host/src/: cli.rs  codec.rs  dacl.rs  dispatch.rs  keys.rs  lib.rs  main.rs  protocol.rs  pty.rs  registry.rs  run.rs  screen.rs  server.rs
crates/repomon-host/tests/: windows_integration.rs
crates/repomon-mcp/: Cargo.toml
crates/repomon-mcp/assets/: repomind.md
crates/repomon-mcp/src/: fleet.rs  lib.rs  mcp.rs  policy.rs  server.rs
crates/repomon-tui/: Cargo.toml
crates/repomon-tui/src/: app.rs  attach_client.rs  cli.rs  client.rs  emu.rs  keybinds.rs  lib.rs  main.rs  notify.rs  popout.rs  theme.rs  view.rs
crates/repomon-tui/tests/: tui.rs
docs/: agents.md  architecture.md  protocol.md  windows-validation.md
docs/superpowers/plans/: 2026-07-20-desktop-gui-m1-skeleton-connect.md  2026-07-20-desktop-gui-m2-m9.md  2026-07-20-phase2-orchestration-journal.md  2026-07-20-phase3-playbooks.md  2026-07-20-phase4-standing-orchestrations.md  2026-07-20-phase5-approval-policy.md  2026-07-20-phase6-phone-loop.md  2026-07-24-extensions-manager.md
docs/superpowers/specs/: 2026-07-06-linux-support-design.md  2026-07-17-ipad-multi-device-design.md  2026-07-19-auto-open-spawned-agent-design.md  2026-07-20-desktop-gui-design.md  2026-07-24-extensions-manager-design.md
