[package]
name = "repomon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core library for repomon: data model, git layer, store, watchers, agent runtime."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
gix = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
globset = { workspace = true }

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
