[package]
name = "repomon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core library for repomon: data model, git layer, store, watchers, agent runtime."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
gix = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
getrandom = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
globset = { workspace = true }

# The Windows session backend talks to per-agent host processes; the host crate carries the
# frozen wire types (protocol/codec/registry) and the per-user pipe DACL the daemon's own
# IPC pipe reuses. windows-sys is for CancelSynchronousIo (byte-stream reader shutdown).
[target.'cfg(windows)'.dependencies]
repomon-host = { path = "../repomon-host" }
base64 = { workspace = true }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
] }

[dev-dependencies]
tempfile = { workspace = true }
