[package]
name = "repomon-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "repomind — an MCP server exposing the repomon fleet to an orchestrator agent (repomond mcp)."

[lib]
name = "repomon_mcp"
path = "src/lib.rs"

[dependencies]
repomon-core = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
