[package]
name = "repomon-desktop"
version.workspace = true
description = "Repomon mission control desktop app"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "repomon_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
tauri = { version = "~2.9.0", features = [] }
tauri-plugin-dialog = "~2.4.0"
tauri-plugin-notification = "~2.3.0"
tauri-plugin-process = "~2.3.0"
tauri-plugin-updater = "~2.9.0"
repomon-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
